added empty code enforcement panel Files modified - [EditGISRecord.html]

--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -240,6 +240,11 @@
                         <wm-panel iconclass="wi wi-attach-file" autoclose="outsideClick" name="panelDocs" title="Documents" class="panel-primary"></wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow23" padding="unset unset 1em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn43">
+                        <wm-panel iconclass="wi wi-error-triangle" autoclose="outsideClick" name="panelCodeEnf" class="panel-primary" title="Code Enforcement"></wm-panel>
+                    </wm-gridcolumn>
+                </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
